refactor: new Mappers, moving "transformaEmDTO" methods to mapper